<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

              xmlns:tools="http://schemas.android.com/tools"
              xmlns:ads="http://schemas.android.com/apk/res-auto"

              tools:context=".FbShareActivity"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/dk_gray" android:gravity="center">

    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/back"
               android:scaleType = "centerCrop"/>

    <!--<TextView
            android:id="@+id/postName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="5"
            />-->

    <!--<ImageView
            android:id="@+id/postImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_post_image"
            android:layout_weight="90"
            />-->

    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="center"
                 android:shrinkColumns="true"
                 android:stretchColumns="1">

        <TableRow android:layout_weight="1"
                  android:layout_gravity="center" >


    <TextView android:layout_width="wrap_content" android:layout_height="181dp"
            android:text="@string/Experience"
            android:gravity="center"
            android:textColor="@color/white"
            android:shadowColor="@color/dk_gray"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"


            android:layout_gravity="center|bottom"/>

        </TableRow>
        <TableRow android:layout_weight="1" android:layout_gravity="center">


    <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:visibility="visible"

            android:text="@string/share"
            android:layout_gravity="top"/>
        </TableRow>

        <TableRow android:layout_weight="1" android:layout_gravity="center">

    <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:visibility="visible"
            android:text="@string/Back"
            android:layout_gravity="bottom"/>

        </TableRow>







        <TableRow android:layout_weight="1"
                  android:layout_gravity="bottom|center_horizontal" >
<com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"

android:id="@+id/adView2"


android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="bottom"
ads:adSize="SMART_BANNER"
ads:adUnitId="@string/admob_publisher_id"
        />
    </TableRow>

    </TableLayout>
</FrameLayout>