<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnterName" >

    <TableLayout
        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="true"
        android:stretchColumns="1"
         >
        
        <TableRow  android:layout_weight="2">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_span="2"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/Name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        </TableRow>
        
        <TableRow  >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="2"
            android:layout_weight="1"
            android:ems="10"
            android:hint = "James"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
        
        </TableRow>
        
        <TableRow android:layout_weight="2" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Phone"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        </TableRow>
        
        <TableRow  >

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="2"
            android:layout_weight="1"
            android:ems="10"
            android:hint = "0501111111"
            android:inputType="phone" />
        
        </TableRow>
        
        <TableRow  android:layout_weight="1"
            		>
            
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_gravity="bottom|left"
             
             android:onClick="GoToChooseDateEnd"
             android:text="@string/Back" />
         
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_gravity="bottom|right"
             android:layout_span="2"
             
             android:onClick="GoToEnterPrice"
             android:text="@string/Confirm" />
         
         </TableRow>

    </TableLayout>

</RelativeLayout>
