<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dk_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        
         >


        <TableRow android:layout_weight="1"></TableRow>
               <TableRow android:layout_weight="1" >




            <ImageButton
                    android:id="@+id/btn_fb"

                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:padding="0dp"
                    android:layout_gravity="top|right"
                    android:src="@drawable/buttonfbselector"

                    />

        </TableRow>



        <TableRow android:layout_weight="1"></TableRow>



        <TableRow android:layout_weight="2" >
            
        <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="2"
        android:text="@string/Sell"
        android:onClick="GoToSell" />
        </TableRow>
        
        <TableRow android:layout_weight="1"></TableRow>

        <TableRow android:layout_weight="2" >

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:text="@string/Buy"
                android:onClick="GoToBuy" />
        </TableRow>

        <TableRow android:layout_weight="1"></TableRow>

        <TableRow android:layout_weight="2" >

            <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="2"
                    android:text="@string/Check"
                    android:onClick="GoToCheck" />
        </TableRow>


        <!--<TableRow
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:text="@string/hello" />
        </TableRow>-->

        <com.google.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_publisher_id"
                ads:loadAdOnCreate="true" />

    </TableLayout>
    
   
    	
    	

    

</RelativeLayout>