<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dk_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChooseDate" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="true"
        android:stretchColumns="1"
         >

        <TableRow android:layout_weight="3"
            android:layout_gravity="bottom|center_horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_span="2"
                android:text="@string/Start"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:layout_span="2" />
        </TableRow>



        <TableRow
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical" >


        </TableRow>
         
        <TableRow android:layout_weight="1" >
            
         <Button
             android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_gravity="bottom|left"
             
             android:text="@string/Back"
             android:onClick="GoToMain" />
         
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_gravity="bottom|right"
             android:layout_span="2"
             
             android:text="@string/Confirm"
             android:onClick="GoToChooseDateEnd" />
         
         </TableRow>

       <!-- <TableRow
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:text="@string/hello" />
        </TableRow>-->

        <com.google.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_publisher_id"
                ads:loadAdOnCreate="true" />
         
    </TableLayout>

   

</RelativeLayout>