<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/dk_gray"
              tools:context=".MainActivity"
              android:orientation="vertical" >



    <LinearLayout   xmlns:tools="http://schemas.android.com/tools"
                    android:background="@color/dk_gray"
                    tools:context=".MainActivity"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="180">


        <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="2"
                android:text="@string/Sell"
                android:onClick="GoToSell" />

        <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:text="@string/Buy"
                android:onClick="GoToBuy" />

        <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:text="@string/Check"
                android:onClick="GoToCheck" />     #



    </LinearLayout>





    <LinearLayout   xmlns:tools="http://schemas.android.com/tools"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dk_gray"
                    tools:context=".MainActivity"
                    android:orientation="horizontal" >

        <ImageButton
                android:id="@+id/btn_fb"
                android:layout_weight="1"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_gravity="top"


                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:padding="0dp"
                android:src="@drawable/buttonselector"

                />




        <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:text="@string/Buy"
                android:onClick="GoToBuy" />
        <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:text="@string/Buy"
                android:onClick="GoToBuy" />





    </LinearLayout>

    <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_publisher_id"
            ads:loadAdOnCreate="true" />


</LinearLayout>