<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dk_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnterPrice" >

    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/back"
               android:scaleType = "centerCrop"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="true"
        android:stretchColumns="1"
        
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/Price"
                android:textColor="@color/white"
                android:shadowColor="@color/dk_gray"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal|center"
                android:layout_weight="1"
                android:ems="10"

                android:inputType="number" >

                <requestFocus />
            </EditText>

        </TableRow>
        
        <TableRow  android:layout_weight="1"
            		>
            
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_gravity="bottom|left"
             
             android:onClick="GoToEnterName"
             android:text="@string/Back" android:minWidth="90dp"/>
         
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_gravity="bottom|right"
             android:layout_span="2"
 
             
             android:text="@string/Confirm" android:minWidth="90dp"/>
         
         </TableRow>


        <!--<TableRow
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:text="@string/hello" />
        </TableRow>-->


        
    </TableLayout>

</FrameLayout>
